--- a/index.html
+++ b/index.html
@@ -33,6 +33,12 @@
                 <div id="navbar-collapse" class="navbar-collapse collapse">
                         <!-- Main navigation -->
                         <ul class="nav navbar-nav">
+                            <li class="navitem active">
+                                <a href="." class="nav-link">Welcome to MkDocs</a>
+                            </li>
+                            <li class="navitem">
+                                <a href="tree-mail/" class="nav-link">Tree mail</a>
+                            </li>
                             <li class="dropdown">
                                 <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Season One Cheeseland <b class="caret"></b></a>
                                 <ul class="dropdown-menu">
